--- a/src/views/Login/index.css
+++ b/src/views/Login/index.css
@@ -1,7 +1,101 @@
-
-.container{
+.container {
     background-color: #ffffff;
     width: 100%;
     height: 100vh;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
+.main-box {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.main-box h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    position: relative;
+    top: -50px;
+    color: #010101;
+    animation:  bigger 1s;
+}
+
+.login {
+    width: 100%;
+    animation: moving-y 1s;
+
+}
+
+.login-show {
+    position: relative;
+    left: 10%;
+    right: 10%;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.login-button {
+    width: 100%;
+    position: relative;
+    left: 15%;
+    right: 10%;
+    text-align: center;
+    margin-top: 1rem;
+}
+
+/* 设置图标排版 */
+.login-box {
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 设置图标边距 */
+.box-item {
+    margin: 1rem;
+}
+
+/* 控制底栏版权信息 */
+.last {
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+}
+
+
+/* 动画定义开始 */
+@keyframes moving-y {
+    0% {
+        transform: translateY(10%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes bigger {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
