--- a/src/components/common/AnimationGo/index.css
+++ b/src/components/common/AnimationGo/index.css
@@ -1,18 +1,18 @@
 /* 入场动画开始 */
-.fade-enter {
+.fade-enter,.fade-appear {
     transform: translateX(100%);
 }
 
 /*入场动画过程*/
-.fade-enter-active {
+.fade-enter-active,.fade-appear {
     transform: translateX(0);
     transition: transform 0.5s ease;
 }
 
 /*入场动画结束*/
-.fade-enter-done {
+/* .fade-enter-done {
     transform: translateX(0);
-}
+} */
 
 /*离场动画开始*/
 .fade-exit {
@@ -31,27 +31,27 @@
 }
 
 /*页面第一次加载时的开始状态*/
-.fade-appear {
-    transform: translateX(0);
-}
+/* .fade-appear {
+    transform: translateX(100%);
+} */
 
 /*页面第一次加载时的动画过程*/
-.fade-appear-active {
-    transform: translateX(100%);
+/* .fade-appear-active {
+    transform: translateX(0%);
     transition: transform 0.5s ease-in;
-}
+} */
 
 
 
 
 /* 反向back */
 /*入场动画开始*/
-.refade-enter {
+.refade-enter,.refade-appear {
     transform: translateX(-100%);
 }
 
 /*入场动画过程*/
-.refade-enter-active {
+.refade-enter-active,.refade-appear-active {
     transform: translateX(0%);
     transition: transform 0.5s ease;
 }
