--- a/src/views/Begin/Begin.css
+++ b/src/views/Begin/Begin.css
@@ -10,6 +10,12 @@
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    right: 0;
 }
 
 .begin-box-item {
