--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -18,3 +18,11 @@
     position: absolute;
     overflow: hidden;
 }
+
+.masonry {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    /* padding: 10px; */
+}
