--- a/src/components/context/HomePicItem/index.css
+++ b/src/components/context/HomePicItem/index.css
@@ -23,6 +23,33 @@
     border-radius: 10px;
 }
 
+
+.home-pic-img-box>div {
+    width: 98%;
+    height: 200px;
+    border-radius: 10px;
+    border: 1px solid #cdcdcd;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-box img {
+    animation: rotatepic 0.8s linear infinite;
+}
+
+@keyframes rotatepic {
+    0% {
+        transform-origin: center;
+        transform: rotate(0deg);
+    }
+    100% {
+        transform-origin: center;
+        transform: rotate(360deg);
+    }
+}
+
 .home-pic-content {
     display: flex;
     flex-direction: column;
