--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -7,6 +7,10 @@ html {
     /* 解决IOS默认滑动很卡的情况 */
     -webkit-overflow-scrolling: touch;
 }
+/* 隐藏滚动条 */
+::-webkit-scrollbar {
+    display: none
+}
 
 /* 禁止缩放表单 */
 input[type=“submit”],
