--- a/src/components/context/HomePicItem/index.css
+++ b/src/components/context/HomePicItem/index.css
@@ -42,10 +42,13 @@
 @keyframes rotatepic {
     0% {
         transform-origin: center;
+        opacity: 0.5;
         transform: rotate(0deg);
     }
+
     100% {
         transform-origin: center;
+        opacity: 1;
         transform: rotate(360deg);
     }
 }
