--- a/src/views/Find/index.css
+++ b/src/views/Find/index.css
@@ -1,7 +1,38 @@
-.find-container{
-    position:fixed;
+.find-container {
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
+    background-color: #ffffff;
+}
+
+.find-nav-bar-box {
+    display: flex;
+    overflow-x: scroll;
+    align-items: center;
+    text-align: center;
+    height: 40px;
+    margin: 10px 0px 0px 10px;
+    /* background-color: #f5f5f5; */
+    /* box-shadow: 1px 2px 2px 2px #888888; */
+}
+.find-nav-bar-active-item{
+    background-color: rgb(0, 0, 0);
+    color: #ffffff;
+    height: 80%;
+    line-height:30px;
+    border-radius: 15px;
+    transition: all 0.5s;
+}
+
+.find-nav-bar-item {
+    width: 25%;
+    flex: none;
+}
+.find-content{
+    width:100%;
+    height: 81vh;
+    overflow-y:scroll;
+    padding-bottom: 45px;
 }
