--- a/src/views/Profile/index.css
+++ b/src/views/Profile/index.css
@@ -1,8 +1,139 @@
-.profile-box{
+.profile-box {
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
     bottom: 49px;
-    overflow-y: scroll;
+}
+
+.profile-wrapper {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+}
+
+/* cammer */
+.profile-cammer{
+    position: fixed;
+    bottom:15%;
+    right: 30px;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    padding: 5px;
+    box-shadow: 5px 5px 5px #888888;
+    background-color: #000;
+}
+
+/* header */
+.header-container {
+    width: 100%;
+    height: 25%;
+    background-color: #f5f5f5;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0 0 50px 50px;
+    padding-bottom: 20px;
+}
+
+.header-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+}
+
+.header-top-left {
+    padding: 20px;
+    width: 70%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.header-nickname{
+    font-size: 25px;
+    font-weight: 700;
+    color: #000;
+}
+.header-desc{
+    font-size: 10px;
+}
+
+.header-top-right{
+    display: flex;
+    flex-direction: row;
+}
+.header-avator{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+.header-edit{
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    background-color: #000;
+    border: 3px #fff solid;
+    position: relative;
+    top: 55px;
+    right: 25px;
+}
+
+.header-bottom{
+    display: flex;
+    flex-direction: row;
+    margin: 0px 0 0 20px;
+    width: 100%;
+}
+.header-bottom-item{
+    margin: 15px;
+}
+.header-bottom-count{
+    font-size: 18px;
+    font-weight: 700;
+    color: #000;
+}
+
+/* box */
+.profile-icon-box{
+    display: flex;
+    flex-direction: row;
+    padding: 18px;
+}
+
+/* Operation */
+
+.operation-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 30px 0 30px;
+}
+
+
+.operation-icon img{
+    width: 25px;
+    height: 25px;
+    background-color: #f5f5f5;
+    border-radius: 50%;
+    padding: 5px;
+}
+
+.operation-left{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.operation-button{
+    color: #fff;
+    background-color: #000;
+    width: 80px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 15px;
+    margin-right: 5px;
 }
